[gd_scene load_steps=7 format=2]

[ext_resource path="res://2dmap.gd" type="Script" id=1]
[ext_resource path="res://scenes/GeoJsonLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BaseTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/godot-touch-camera-2d/TouchCamera2D.gd" type="Script" id=4]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/map.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BaseTileMap" parent="." instance=ExtResource( 3 )]

[node name="GeoJsonLayer" parent="." instance=ExtResource( 2 )]
file_path = "res://data/coastline_cropped_simplified.geojson"
color = Color( 0.0352941, 1, 0.976471, 1 )

[node name="GeoJsonLayer2" parent="." instance=ExtResource( 2 )]
file_path = "res://data/vietnam_province_borders.geojson"
color = Color( 0.345098, 1, 0.188235, 1 )

[node name="GeoJsonLayer3" parent="." instance=ExtResource( 2 )]
file_path = "res://data/countries_borders.geojson"
color = Color( 1, 1, 1, 1 )

[node name="GeoJsonLayer4" parent="." instance=ExtResource( 2 )]
file_path = "res://data/populated_places.geojson"

[node name="GeoJsonLayer5" parent="." instance=ExtResource( 2 )]
file_path = "res://data/map_rect.geojson"
color = Color( 0, 0, 0, 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.219608, 0.780392, 1, 0.00392157 )
polygon = PoolVector2Array( 0, 0, 256, 0, 256, 256, 0, 256 )

[node name="TouchCamera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 26, 26 )
limit_left = 397025
limit_top = 222251
limit_right = 446962
limit_bottom = 253815
editor_draw_limits = true
script = ExtResource( 4 )
min_zoom = 1.0
max_zoom = 28.0
mouse_zoom_factor = Vector2( 0.9, 0.9 )
zoom_speed = 15.0

[node name="CanvasLayer" type="CanvasLayer" parent="TouchCamera2D"]

[node name="Grid" type="Node2D" parent="TouchCamera2D/CanvasLayer"]
script = ExtResource( 5 )
color = Color( 0, 0.952941, 1, 0.972549 )

[node name="Map UI" parent="TouchCamera2D/CanvasLayer" instance=ExtResource( 6 )]

[connection signal="redraw_requested" from="TouchCamera2D" to="GeoJsonLayer4" method="update"]
[connection signal="redraw_requested" from="TouchCamera2D" to="TouchCamera2D/CanvasLayer/Grid" method="update"]
[connection signal="basemap_type_changed" from="TouchCamera2D/CanvasLayer/Map UI" to="." method="_on_Map_UI_basemap_type_changed"]
[connection signal="zoom_in_clicked" from="TouchCamera2D/CanvasLayer/Map UI" to="." method="_on_Map_UI_zoom_in_clicked"]
[connection signal="zoom_out_clicked" from="TouchCamera2D/CanvasLayer/Map UI" to="." method="_on_Map_UI_zoom_out_clicked"]
